# Number-Theory

./: .gitignore  README.md  README.txt  setup.cfg  setup.py
src/: core.py
tests/: test_advanced.py  test_basic.py
