[metadata]
name = Number-Theory-orlogan
version = 0.1.0.dev
author = Logan Reed
author_email = me@loganreed.org
description = A Package of Number Theory Algorithms
long_description = file: README.txt
long_description_content_type = text/markdown
url = https://github.com/orlogan/Number-Theory
classifiers =
            Programming Language :: Python :: 3
            License :: file: LICENSE
            Operating System :: OS Independent

[options]
package_dir = src
packages = >= 3.6
